# junko-discord-bot

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html  index.js  package.json  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20220123223836_init/: migration.sql
prisma/migrations/20220123231409_add_users_table/: migration.sql
src/: deploy-commands.js  deploy-commands.ts  index.js  index.ts  main.rs  types.ts  utils.rs
src/commands/: ask.rs  bcoin.js  bcoin.ts  coin.js  coin.ts  join.rs  leave.rs  link.ts  mod.rs  mvp.rs  ping.rs  ping.ts  play.rs  skip.rs  tts.rs  wallet.ts
src/contracts/: abi.json  bcoinContract.ts
src/infra/repositories/: UsersRepository.ts
src/shared/: moralis.ts
