[package]
name = "junko-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "standard_framework", "voice"]}
songbird = { version = "0.3.0", features = ["yt-dlp"] }
tokio = { version = "1.21.2", features = ["full"] }
youtube_dl = "0.8.0"
futures = "0.3.17"
