[package]
name = "junko-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "standard_framework", "voice", "cache"]}
#songbird = { version = "0.3.0", features = ["yt-dlp", "builtin-queue"] }
tokio = { version = "1.21.2", features = ["full"] }
youtube_dl = "0.8.0"
futures = "0.3.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
scraper = "0.12.0"
select = "0.6.0"

[dependencies.songbird]
features = ["yt-dlp", "builtin-queue"]
git = "https://github.com/Erk-/songbird/"
branch = "do-not-fail-if-new-opcode"
